i didint know what changed
i dont know

--- a/index.html
+++ b/index.html
@@ -58,15 +58,9 @@
 			</div>
 	</header>
 
-
-
-
+	<script src="ignore/index.js"></script>
 </body>
 
-
-
 <!-- ⬆️ Put your code above this line ⬆️ -->
-<script src="ignore/index.js">
-</script>
 
 </html>
